--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "aos": "^2.3.4",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
+    "better-react-spinkit": "^2.0.4",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "react-toastify": "^8.1.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tw-elements": "^1.0.0-alpha11"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
